inclusao de botões direção

--- a/snake.html
+++ b/snake.html
@@ -173,32 +173,12 @@
     </div>
     <div class="idControl">
       <div class="idControlUp">
-        <ul>
-          <li onclick="ArrowUp()">
-            <svg width="30" height="30" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" >
-              <path d="M32 2C15.432 2 2 15.432 2 32s13.432 30 30 30s30-13.432 30-30S48.568 2 32 2zm5.143 28.305V49H26.857V30.305H16L32 15l16 15.305H37.143z" fill="#000000"></path>
-            </svg>
-          </li>
-        </ul>
+        <button onclick="ArrowUp()"> UP </button>
       </div>
       <div class="idControlDown">
-        <ul >
-          <li onclick="ArrowLeft()">
-            <svg width="30" height="30" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" >
-              <path d="M32 2C15.432 2 2 15.432 2 32c0 16.568 13.432 30 30 30s30-13.432 30-30C62 15.432 48.568 2 32 2zm17 35.428H30.307V48L15 32l15.307-16v11.143H49v10.285z" fill="#000000"></path>
-            </svg>
-          </li>
-          <li onclick="ArrowDown()">
-            <svg width="30" height="30" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" >
-              <path d="M32 2C15.432 2 2 15.432 2 32s13.432 30 30 30s30-13.432 30-30S48.568 2 32 2zm0 47L16 33.695h10.857V15h10.285v18.695H48L32 49z" fill="#000000"></path>
-            </svg>
-          </li>
-          <li onclick="ArrowRight()">
-            <svg width="30" height="30" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" >
-              <path d="M32 2C15.432 2 2 15.432 2 32c0 16.568 13.432 30 30 30s30-13.432 30-30C62 15.432 48.568 2 32 2zm1.693 46V37.428H15V27.143h18.693V16L49 32L33.693 48z" fill="#000000"></path>
-            </svg>
-          </li>
-        </ul>
+        <button onclick="ArrowLeft()"> LEFT </button>
+        <button onclick="ArrowDown()"> DOWN </button>
+        <button onclick="ArrowRight()"> RIGHT </button>
       </div>
     </div>
 
