setas de comando

--- a/snake.html
+++ b/snake.html
@@ -173,12 +173,12 @@
     </div>
     <div class="idControl">
       <div class="idControlUp">
-        <button onclick="ArrowUp()"> UP </button>
+        <input type=image src="img/up.svg" width="35" height="35" onclick="ArrowUp()"/>
       </div>
       <div class="idControlDown">
-        <button onclick="ArrowLeft()"> LEFT </button>
-        <button onclick="ArrowDown()"> DOWN </button>
-        <button onclick="ArrowRight()"> RIGHT </button>
+        <input type=image src="img/left.svg" width="35" height="35" onclick="ArrowLeft()"/>
+        <input type=image src="img/down.svg" width="35" height="35" onclick="ArrowDown()"/>
+        <input type=image src="img/right.svg" width="35" height="35" onclick="ArrowRight()"/>
       </div>
     </div>
 
